force-app/main/default/objects/FieloCRUD__PageComponent__c/FieloCRUD__PageComponent__c.object-meta.xml
<CustomObject>
    <label>Page Component</label>
    <nameField>
        <displayFormat>PC-{000000}</displayFormat>
        <label>Page Component #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Page Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>