force-app/main/default/objects/FieloCRUD__PageComponent__c/fields/FieloCRUD__AdditionalCSSClasses__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__AdditionalCSSClasses__c</fullName>
    <label>Additional CSS Classes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>