force-app/main/default/objects/FieloCRUD__PageComponent__c/fields/FieloCRUD__CSSContent__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__CSSContent__c</fullName>
    <label>CSS Content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>