force-app/main/default/objects/FieloCRUD__PageComponent__c/fields/FieloCRUD__FieldApiName__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__FieldApiName__c</fullName>
    <label>Field API Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>