force-app/main/default/objects/FieloCRUD__PageComponent__c/fields/FieloCRUD__FieldLookupFieldToShow__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__FieldLookupFieldToShow__c</fullName>
    <defaultValue>&#39;Name&#39;</defaultValue>
    <inlineHelpText>Define the field API name (from the related object) that will be displayed on the picklist.</inlineHelpText>
    <label>Field To Show In Picklist</label>
    <length>255</length>
    <type>Text</type>
</CustomField>