force-app/main/default/objects/FieloCRUD__PageComponent__c/fields/FieloCRUD__FieldLookupWhereCondition__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__FieldLookupWhereCondition__c</fullName>
    <inlineHelpText>Define your WHERE condition clause for the object related through the lookup. You may include fields; ORDER BY and LIMIT clauses; and variables for Member Id, Account Id, Contact Id, UserId (ex. Member__c =: memberId)</inlineHelpText>
    <label>Where Condition</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>