force-app/main/default/objects/FieloCRUD__PageComponent__c/fields/FieloCRUD__FieldType__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__FieldType__c</fullName>
    <inlineHelpText>Este campo se completa automáticamente por trigger</inlineHelpText>
    <label>Field Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>