force-app/main/default/objects/FieloCRUD__PageComponent__c/fields/FieloCRUD__FileUploadMandatory__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__FileUploadMandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>File Upload Mandatory</label>
    <type>Checkbox</type>
</CustomField>