force-app/main/default/objects/FieloCRUD__PageComponent__c/fields/FieloCRUD__Height__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__Height__c</fullName>
    <defaultValue>&#39;1000px&#39;</defaultValue>
    <inlineHelpText>Complete with the number of pixels. Ex "100px"</inlineHelpText>
    <label>Height</label>
    <length>40</length>
    <type>Text</type>
</CustomField>