force-app/main/default/objects/FieloCRUD__PageComponent__c/fields/FieloCRUD__HideLabel__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__HideLabel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Label</label>
    <type>Checkbox</type>
</CustomField>