force-app/main/default/objects/FieloCRUD__PageComponent__c/fields/FieloCRUD__HTMLCode__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__HTMLCode__c</fullName>
    <label>HTML Code</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>