force-app/main/default/objects/FieloCRUD__PageComponent__c/fields/FieloCRUD__HTMLContent__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__HTMLContent__c</fullName>
    <label>HTML Content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>