force-app/main/default/objects/FieloCRUD__PageComponent__c/fields/FieloCRUD__HTMLEscape__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__HTMLEscape__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HTML Escape</label>
    <type>Checkbox</type>
</CustomField>