force-app/main/default/objects/FieloCRUD__PageComponent__c/fields/FieloCRUD__JSCode__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__JSCode__c</fullName>
    <label>JS Code</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>