force-app/main/default/objects/FieloCRUD__PageComponent__c/fields/FieloCRUD__LimitAttachments__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__LimitAttachments__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Limit Attachments</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>