force-app/main/default/objects/FieloCRUD__PageComponent__c/fields/FieloCRUD__ObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__ObjectAPIName__c</fullName>
    <inlineHelpText>Complete with the Object API name of the records that you want to add through the page layout.</inlineHelpText>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>