force-app/main/default/objects/FieloCRUD__PageComponent__c/fields/FieloCRUD__PageName__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__PageName__c</fullName>
    <label>URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>