force-app/main/default/objects/FieloCRUD__PageComponent__c/fields/FieloCRUD__PageSection__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__PageSection__c</fullName>
    <label>Page Section</label>
    <referenceTo>FieloCRUD__PageSection__c</referenceTo>
    <relationshipLabel>Components</relationshipLabel>
    <relationshipName>PageComponents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>