force-app/main/default/objects/FieloCRUD__PageComponent__c/fields/FieloCRUD__PicklistYear__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__PicklistYear__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows a year picklist on date fields</description>
    <inlineHelpText>Shows a year picklist on date fields</inlineHelpText>
    <label>Picklist Year</label>
    <type>Checkbox</type>
</CustomField>