force-app/main/default/objects/FieloCRUD__PageComponent__c/fields/FieloCRUD__RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__RecordTypeName__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RecordType Name</label>
    <type>Text</type>
</CustomField>