force-app/main/default/objects/FieloCRUD__PageComponent__c/fields/FieloCRUD__Required__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>