force-app/main/default/objects/FieloCRUD__PageComponent__c/fields/FieloCRUD__SearchableFieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__SearchableFieldAPIName__c</fullName>
    <inlineHelpText>Complete with the API name of the lookup field that references the Object that is going to be query.</inlineHelpText>
    <label>Searchable Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>