force-app/main/default/objects/FieloCRUD__PageComponent__c/fields/FieloCRUD__SearchableFieldsAPIName__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__SearchableFieldsAPIName__c</fullName>
    <inlineHelpText>Define by which fields (API names separated by comma) the user can search records for. The fields must be related to the object obtained through the "Searchable Field API Name" field.</inlineHelpText>
    <label>Searchable Fields API Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>