force-app/main/default/objects/FieloCRUD__PageComponent__c/fields/FieloCRUD__SearchEnabled__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__SearchEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Search Enabled</label>
    <type>Checkbox</type>
</CustomField>