force-app/main/default/objects/FieloCRUD__PageComponent__c/fields/FieloCRUD__SearchFieldSet__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__SearchFieldSet__c</fullName>
    <inlineHelpText>Define which columns (field API names separated by comma) are going to be display in the search table and in which order.</inlineHelpText>
    <label>Search FieldSet</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>