force-app/main/default/objects/FieloCRUD__PageComponent__c/fields/FieloCRUD__ShowDelete__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__ShowDelete__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show delete</label>
    <type>Checkbox</type>
</CustomField>