force-app/main/default/objects/FieloCRUD__PageComponent__c/fields/FieloCRUD__TabIndex__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__TabIndex__c</fullName>
    <inlineHelpText>Specifies the tab order of the field (when the "tab" button is used for navigating).</inlineHelpText>
    <label>Tab Index</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>