force-app/main/default/objects/FieloCRUD__PageComponent__c/fields/FieloCRUD__UploadFilesAutomatically__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__UploadFilesAutomatically__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Upload Files Automatically</label>
    <type>Checkbox</type>
</CustomField>