force-app/main/default/objects/FieloCRUD__PageComponent__c/fields/FieloCRUD__Visibility__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__Visibility__c</fullName>
    <label>Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>View</fullName>
            </value>
            <value>
                <fullName>Edit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>