force-app/main/default/objects/FieloCRUD__PageComponent__c/fields/FieloCRUD__Width__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__Width__c</fullName>
    <defaultValue>&#39;100%&#39;</defaultValue>
    <inlineHelpText>Complete with the number of pixels or percentage. Ex "100px", "100%"</inlineHelpText>
    <label>Width</label>
    <length>40</length>
    <type>Text</type>
</CustomField>