force-app/main/default/objects/FieloCRUD__PageComponent__c/fields/FieloCRUD__YearRange__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__YearRange__c</fullName>
    <inlineHelpText>Set the range of years for the picklist with the format XXXX:YYYY</inlineHelpText>
    <label>Year Range</label>
    <length>9</length>
    <type>Text</type>
</CustomField>