force-app/main/default/objects/FieloCRUD__PageComponent__c/recordTypes/FieloCRUD__BlankSpace.recordType-meta.xml
<RecordType>
    <fullName>FieloCRUD__BlankSpace</fullName>
    <active>true</active>
    <description>Allows to add blank spaces between fields.</description>
    <label>Blank Space</label>
</RecordType>