force-app/main/default/objects/FieloCRUD__PageComponent__c/recordTypes/FieloCRUD__CustomComponentField.recordType-meta.xml
<RecordType>
    <fullName>FieloCRUD__CustomComponentField</fullName>
    <active>true</active>
    <description>Allows to add a custom apex component for a field</description>
    <label>Custom Component Field</label>
</RecordType>