force-app/main/default/objects/FieloCRUD__PageComponent__c/recordTypes/FieloCRUD__Field.recordType-meta.xml
<RecordType>
    <fullName>FieloCRUD__Field</fullName>
    <active>true</active>
    <description>Allows to display fields from the object setting related to this page layout.</description>
    <label>Field</label>
</RecordType>