force-app/main/default/objects/FieloCRUD__PageComponent__c/recordTypes/FieloCRUD__FileUpload.recordType-meta.xml
<RecordType>
    <fullName>FieloCRUD__FileUpload</fullName>
    <active>true</active>
    <description>Allows members to add attachments. Is only visible in "Edit" mode.</description>
    <label>File Upload</label>
</RecordType>