force-app/main/default/objects/FieloCRUD__PageComponent__c/recordTypes/FieloCRUD__HTMLContent.recordType-meta.xml
<RecordType>
    <fullName>FieloCRUD__HTMLContent</fullName>
    <active>true</active>
    <description>Displays HTML content. Ex.: Instructions on how to create a record.</description>
    <label>HTML Content</label>
</RecordType>