force-app/main/default/objects/FieloCRUD__PageComponent__c/recordTypes/FieloCRUD__iFrame.recordType-meta.xml
<RecordType>
    <fullName>FieloCRUD__iFrame</fullName>
    <active>true</active>
    <description>Allows to include a custom page/component within the page layout.</description>
    <label>iFrame</label>
</RecordType>