force-app/main/default/objects/FieloCRUD__PageComponent__c/recordTypes/FieloCRUD__RelatedDetails.recordType-meta.xml
<RecordType>
    <fullName>FieloCRUD__RelatedDetails</fullName>
    <active>true</active>
    <description>Allows to create/edit child records of the object defined in the object setting through the editable mode of the page layout.</description>
    <label>Related Details</label>
</RecordType>