force-app/main/default/objects/FieloCRUD__PageComponent__c/validationRules/FieloCRUD__PageComponent_FieldToShowMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloCRUD__PageComponent_FieldToShowMandatory</fullName>
    <active>true</active>
    <errorConditionFormula>FieloCRUD__FieldType__c = &#39;lookup&#39; 
&amp;&amp; 
ISNULL(FieloCRUD__FieldLookupWhereCondition__c)</errorConditionFormula>
    <errorDisplayField>FieloCRUD__FieldLookupFieldToShow__c</errorDisplayField>
    <errorMessage>You must include a value (ex. name) when field type is "Lookup".</errorMessage>
</ValidationRule>