force-app/main/default/objects/FieloCRUD__PageComponent__c/validationRules/FieloCRUD__PageComponent_RequiredReadOnly.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloCRUD__PageComponent_RequiredReadOnly</fullName>
    <active>true</active>
    <errorConditionFormula>FieloCRUD__ReadOnly__c = TRUE
&amp;&amp;
FieloCRUD__Required__c = TRUE</errorConditionFormula>
    <errorMessage>Required and Read Only fields cannot be checked at the same time.</errorMessage>
</ValidationRule>